@@ -6,9 +6,11 @@ DIST tzdata2009c.tar.gz 175126 RMD160 8308bd319589efd79159358b35a105c721f80c05 S
 DIST tzdata2009d.tar.gz 176911 RMD160 af183cbeeefdb7eeac0b0f5feb3be81bc897d2f3 SHA1 fdb23d045f0a9458c9e8b9b8e53e7e04a82d6627 SHA256 f884ff8af90824cac55786e4b3a6048af10702a5f15036bf55f33d74704ad102
 DIST tzdata2009e.tar.gz 177453 RMD160 458a30139d4562b27323b103401bf428635e7956 SHA1 e1476d349ddf74af27519757e4712c076a4b9220 SHA256 6f4e88fefd72b9ed9c6fde56ebc434c86cd597114685bf98ae7aab031a8cce8c
 DIST tzdata2009f.tar.gz 177771 RMD160 fafd6f71e48bf77d7e026b6eafc491c4401a9b3c SHA1 b197835925ad34eaa08190e88e04cc515c0c570e SHA256 654b309a0c130a156cc81787f8af4dc9a517d283606f420e89364bc93c83da6c
+DIST tzdata2009g.tar.gz 178224 RMD160 8fa26f1e2a12c8d8602054f3fc3ad5f7cd2aa256 SHA1 c3cb83c022c9846f4be67fc6a2c6d7c42072702f SHA256 da033acc418328edcb32a089c26c1f6a828f596b4f3aa26c9319e3ab19e05073
 EBUILD timezone-data-2009c.ebuild 2965 RMD160 6004e792b87e67538d39f020520cf9a31618552b SHA1 4c4ef8db29037db5ed4b4703953f02e33be7efc4 SHA256 23621902f0fa5501c067a383663555575c61b13b78d39feb8e3a6417f06c13b3
 EBUILD timezone-data-2009d.ebuild 2961 RMD160 59100c045b49ae04ba541cebaf164f489e4f4b52 SHA1 598fd65d111a50dac8367c30b929697471ecb253 SHA256 a6d4a633d6fd73177051a4d82eed8365b214954d1b004181a02009425ef30bc2
 EBUILD timezone-data-2009e.ebuild 3011 RMD160 489eb462a0c235e87d65aab8eb54e2a17864f402 SHA1 0a4dad6e43ba85b9d6e5cbc90f34c9f869fc489c SHA256 a3085bfb08d884a2cdf7da75eea8367ff706d7d522d952179f3ea09567697288
 EBUILD timezone-data-2009f.ebuild 3081 RMD160 84a08978237be89b2cd3ab6160a2d91cbdc89ad3 SHA1 4a964cabd2d61c47074ae2157e2d13e56c2451c2 SHA256 48cda37f847f76774d5b9d5294174519f443abf0676f9c2734f731d538c566c2
-MISC ChangeLog 22879 RMD160 98812a3eb33d19898f17f77800d34fb7ae890287 SHA1 316ad934ec2ea14439cbe7cec203f240955551ff SHA256 34f9fd145d207aef2065cb498ea54d65720e4719284aec64c327f2683cfdb9c1
+EBUILD timezone-data-2009g.ebuild 3081 RMD160 7d7797b89945d06387f9af939a5e236bb161f689 SHA1 659c258648148c4d4d3321dd1f409a5e2988423d SHA256 ec3cb357e1927934fa6080627b37bdaf076944afc13b730bf3145214bdc7081d
+MISC ChangeLog 23039 RMD160 d0c5d40d2323d2a086f136f52610e7aa6ca57fc8 SHA1 b1718b06fd9d52c9af3d1f9c99637965e5ec8acf SHA256 e63063ff4a5ea4e96a97ee4986daa5c87d73c05c4eb9921cc77cc46bcd7b3320
 MISC metadata.xml 162 RMD160 d002486a43522f2116b1d9d59828c484956d66e2 SHA1 d6b4923897f6ae673b4f93646f5b4ba61d5a2c3c SHA256 65a915d44de1f01d4b7f72d313b4192c38374a9835d24988c00c1e73dca5805a
